--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
             <scope>runtime</scope>
             <version>42.5.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
