--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,20 @@
             <version>2.3.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -151,7 +165,8 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>4.6.1</version>
                 <configuration>
-                    <changeLogFile>src/main/resources/dbschema.yaml</changeLogFile>
+                    <changeLogFile>src/main/resources/dbschema.yaml
+                    </changeLogFile>
                     <url>jdbc:postgresql://localhost:5432/pynance</url>
                     <username>pynance</username>
                     <password>localdev</password>
@@ -167,8 +182,8 @@
                         <phase>generate-sources</phase>
                         <configuration>
                             <tasks>
-                                <mkdir dir="${project.build.directory}/test-classes" />
-                                <mkdir dir="${project.build.directory}/classes" />
+                                <mkdir dir="${project.build.directory}/test-classes"/>
+                                <mkdir dir="${project.build.directory}/classes"/>
                             </tasks>
                         </configuration>
                         <goals>
@@ -176,6 +191,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.2</version>
             </plugin>
         </plugins>
     </build>
