Make tests run on h2 and pass.

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,2 +1,7 @@
-spring.datasource.url = jdbc:h2:mem:test
+# Ideally we want H2 to just "quote" the keywords so they can be escaped:
+# http://www.h2database.com/html/advanced.html#compatibility
+spring.datasource.url = jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;NON_KEYWORDS=KEY,\
+  VALUE
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=create-drop
